# yturria

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  EVALUACION_ARQUITECTURA_SOFIA_WEP.md  SECRETS.md  docker-compose.yml
backend/: .env.example  README.md  migrate_sofia.py  pyproject.toml  test_sofia.py  test_sofia_e2e.py  validate_sofia.py
backend/app/: main.py
backend/app/config/: db.py  email.py
backend/app/controllers/: AgentController.py  AuthController.py  PrivacyController.py  TextAgentController.py
backend/app/middlewares/: cors.py  http_error_handler.py  rate_limiter.py
backend/app/models/: AuditTrailEvent.py  Contact.py  DataPrivacyRequest.py  TextAgent.py  TextAgentKnowledgeBase.py  TextAgentTool.py  TextAgentWhatsApp.py  TextAppointment.py  TextConversation.py  TextKnowledgeBaseChunk.py  TextKnowledgeBaseDocument.py  TextMessage.py  TextProviderConfig.py  Token.py  User.py  UserAgent.py  UserCalendarConnection.py  UserPhoneNumber.py  UserTool.py  UserWhatsAppConfig.py  VoiceAgentRuntimeConfig.py  VoiceMessage.py  __init__.py
backend/scripts/: backup_db.sh
backend/tests/: test_appointment_unix_timezone_unit.py  test_escalation_threshold_unit.py  test_google_calendar_service_unit.py  test_legal_notice_unit.py  test_sofia_acceptance_matrix.py  test_sofia_auto_appointment_integration.py  test_sofia_classify_unit.py  test_sofia_config_persistence_unit.py  test_sofia_datetime_parser_unit.py  test_tenant_profile_unit.py  test_text_agent_templates_unit.py  test_uncertainty_escalation_unit.py  test_voice_appointments_integration.py
(+109 files in other folders)
